--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Tek-Pak Store</title>
   <link rel="stylesheet" href="./styles.css"/>
+  <style>
+    .emptyState{
+      border:1px dashed var(--line);
+      border-radius: 16px;
+      padding: 14px;
+      background: rgba(255,255,255,.04);
+      color: var(--muted);
+      line-height: 1.35;
+    }
+    .toggleRow{
+      display:flex; gap:10px; align-items:center; flex-wrap:wrap;
+    }
+    .toggle{
+      display:flex; align-items:center; gap:10px;
+      padding: 8px 10px;
+      border: 1px solid var(--line);
+      border-radius: 999px;
+      background: rgba(255,255,255,.04);
+      cursor:pointer;
+      user-select:none;
+    }
+    .toggle input{ width:auto; }
+    .priceBig{ font-weight:950; font-size: 16px; }
+  </style>
 </head>
 <body>
 <header class="topbar">
@@ -36,11 +60,24 @@
           <select class="select" id="cat">
             <option value="">All categories</option>
           </select>
+          <select class="select" id="sort">
+            <option value="newest">Sort: Newest</option>
+            <option value="priceLow">Sort: Price (Low)</option>
+            <option value="priceHigh">Sort: Price (High)</option>
+            <option value="titleAZ">Sort: Title (A–Z)</option>
+          </select>
           <button class="btn primary" id="btnLoad">Search</button>
         </div>
 
-        <div style="height:12px"></div>
-        <div class="small" id="meta">Loading…</div>
+        <div style="height:10px"></div>
+
+        <div class="toggleRow">
+          <label class="toggle">
+            <input type="checkbox" id="listedOnly"/>
+            <span class="small"><b>Show LISTED only</b> (hide AVAILABLE not-yet-posted)</span>
+          </label>
+          <div class="small" id="meta">Loading…</div>
+        </div>
       </div>
     </div>
 
@@ -72,6 +109,7 @@
     </div>
     <div class="bd">
       <div class="grid cols-3" id="grid"></div>
+      <div id="empty" class="emptyState" style="display:none;"></div>
     </div>
   </div>
 </main>
@@ -123,35 +161,53 @@
 <script src="./app.js"></script>
 <script>
 let CONFIG = { companyName:"Tek-Pak Inc.", logoUrl:"" };
-let ITEMS = [];
-let DROPDOWNS = {};
+let ALL_SELLABLE = []; // unfiltered sellable list
+let ITEMS = [];        // rendered list
+let _debounce = null;
 
 function openDrawer(){ qs("#drawerBack").classList.add("show"); }
 function closeDrawer(){ qs("#drawerBack").classList.remove("show"); }
 
+function toNumPrice(v){
+  const s = String(v ?? "").trim();
+  if (!s) return NaN;
+  const cleaned = s.replace(/[^0-9.]/g,"");
+  const n = Number(cleaned);
+  return Number.isFinite(n) ? n : NaN;
+}
+
 function publicFilter(items){
+  const listedOnly = qs("#listedOnly").checked;
   return items.filter(it => {
     const st = String(it.Status||"").toUpperCase();
+    if (listedOnly) return st === "LISTED";
     return (st === "AVAILABLE" || st === "LISTED");
   });
 }
 
+function safeText(v){ return String(v ?? "").trim(); }
+
 function cardHtml(it){
-  const title = it.Title || "Item";
-  const sku = it.TP_SKU || "";
-  const brand = it.Brand || "";
-  const model = it.Model || "";
-  const price = it.List_Price || it.Price || ""; // optional if you use it
+  const title = safeText(it.Title) || "Item";
+  const sku = safeText(it.TP_SKU);
+  const brand = safeText(it.Brand);
+  const model = safeText(it.Model);
+  const priceRaw = it.List_Price || it.Price || "";
+  const priceNum = toNumPrice(priceRaw);
   const status = String(it.Status||"").toUpperCase();
 
   const specs = [brand, model].filter(Boolean).join(" • ") || "See details";
 
   const pill = (status === "AVAILABLE" || status === "LISTED")
-    ? `<span class="pill good">${status}</span>`
-    : `<span class="pill warn">${status||"—"}</span>`;
+    ? `<span class="pill good">${escHtml(status)}</span>`
+    : `<span class="pill warn">${escHtml(status||"—")}</span>`;
+
+  const priceLine = Number.isFinite(priceNum)
+    ? `<div class="small priceBig">$${priceNum.toFixed(2)}</div>`
+    : (priceRaw ? `<div class="small"><strong>Price:</strong> ${escHtml(priceRaw)}</div>` : ``);
 
   return `
-    <div class="card" data-sku="${escHtml(sku)}">
+    <div class="card" data-open="${escHtml(sku)}" style="cursor:pointer;">
       <div class="hd">
         <div>
           <h2>${escHtml(title)}</h2>
@@ -161,10 +217,11 @@ function cardHtml(it){
       </div>
       <div class="bd">
         <div class="small mono">${escHtml(sku)}</div>
-        ${price ? `<div style="height:8px"></div><div class="small"><strong>Price:</strong> ${escHtml(price)}</div>` : ``}
+        <div style="height:8px"></div>
+        ${priceLine}
         <div style="height:10px"></div>
         <div class="controls">
-          <button class="btn primary" data-open="${escHtml(sku)}">View</button>
+          <button class="btn primary" data-open-btn="${escHtml(sku)}">View</button>
         </div>
       </div>
     </div>
@@ -172,12 +229,26 @@ function cardHtml(it){
 }
 
 function renderGrid(){
-  qs("#grid").innerHTML = ITEMS.map(cardHtml).join("");
+  const grid = qs("#grid");
+  const empty = qs("#empty");
+
+  grid.innerHTML = ITEMS.map(cardHtml).join("");
+
+  if (!ITEMS.length){
+    empty.style.display = "block";
+    empty.innerHTML = `
+      <b>No matching items.</b><br>
+      Try a different search, clear the category filter, or turn off “LISTED only”.
+    `;
+  } else {
+    empty.style.display = "none";
+  }
+
   qs("#meta").textContent = `Showing ${ITEMS.length} item(s).`;
 }
 
-function fillCategoryDropdown(items){
-  const cats = new Set(items.map(x => String(x.Category||"").trim()).filter(Boolean));
+function fillCategoryDropdownFromAllSellable(){
+  const cats = new Set(ALL_SELLABLE.map(x => String(x.Category||"").trim()).filter(Boolean));
   const sel = qs("#cat");
   const keep = sel.value;
   sel.innerHTML = `<option value="">All categories</option>` + Array.from(cats).sort()
@@ -192,9 +263,8 @@ function pickItemBySku(sku){
 function ebayUrlFor(it){
   const itemId = String(it.eBay_ItemID || it.Ebay_ItemID || it.ebay_itemid || "").trim();
   if (itemId) return `https://www.ebay.com/itm/${encodeURIComponent(itemId)}`;
-  // fallback: if you later store direct URL
   const direct = String(it.eBay_URL || it.Ebay_URL || "").trim();
-  return direct || "https://www.ebay.com/";
+  return direct || "";
 }
 
 function showItem(it){
@@ -209,9 +279,42 @@ function showItem(it){
   qs("#dIssues").textContent = it.Known_Issues || "None listed beyond photos/description.";
 
   const url = ebayUrlFor(it);
-  qs("#btnEbay").href = url;
+  const btn = qs("#btnEbay");
+  if (url){
+    btn.href = url;
+    btn.textContent = "View Listing";
+    btn.classList.remove("warn");
+  } else {
+    btn.href = "https://www.ebay.com/";
+    btn.textContent = "Listing not linked";
+  }
 
   openDrawer();
+}
+
+function sortItems(items){
+  const mode = qs("#sort").value;
+  const copy = [...items];
+
+  if (mode === "titleAZ"){
+    copy.sort((a,b)=> safeText(a.Title).localeCompare(safeText(b.Title)));
+  } else if (mode === "priceLow" || mode === "priceHigh"){
+    copy.sort((a,b)=>{
+      const ap = toNumPrice(a.List_Price || a.Price);
+      const bp = toNumPrice(b.List_Price || b.Price);
+      const an = Number.isFinite(ap) ? ap : 1e18;
+      const bn = Number.isFinite(bp) ? bp : 1e18;
+      return mode === "priceLow" ? (an-bn) : (bn-an);
+    });
+  } else {
+    // newest
+    copy.sort((a,b)=>{
+      const aa = Number(a.UpdatedAt || a.Intake_Date || a._row || 0);
+      const bb = Number(b.UpdatedAt || b.Intake_Date || b._row || 0);
+      return (bb - aa);
+    });
+  }
+  return copy;
 }
 
 async function loadStore(){
@@ -220,9 +323,15 @@ async function loadStore(){
 
   try{
     const res = await apiGet({ action:"listInventory", tab:"Inventory_Retail", q });
-    let items = publicFilter(res.items || []);
+    const raw = res.items || [];
 
+    // 1) Store full sellable list for dropdown fill
+    ALL_SELLABLE = publicFilter(raw);
+
+    // 2) Apply category filter + sorting
+    let items = ALL_SELLABLE;
     if (cat) items = items.filter(x => String(x.Category||"") === cat);
+    items = sortItems(items);
 
     // IMPORTANT: strip internal-only fields (just in case)
     ITEMS = items.map(it => {
@@ -235,23 +344,36 @@ async function loadStore(){
       return clean;
     });
 
-    fillCategoryDropdown(ITEMS);
+    fillCategoryDropdownFromAllSellable();
     renderGrid();
     toast("Loaded store items.");
   }catch(err){
     toast(err.message, "bad");
     qs("#meta").textContent = "Error loading store.";
+    qs("#grid").innerHTML = "";
+    qs("#empty").style.display = "block";
+    qs("#empty").innerHTML = `<b>Couldn’t load items.</b><br>${escHtml(err.message || "Unknown error")}`;
   }
 }
 
 // events
 qs("#btnLoad").addEventListener("click", loadStore);
+
+qs("#q").addEventListener("input", ()=>{
+  clearTimeout(_debounce);
+  _debounce = setTimeout(loadStore, 350);
+});
 qs("#q").addEventListener("keydown", (e)=>{ if(e.key==="Enter") loadStore(); });
 
+qs("#cat").addEventListener("change", loadStore);
+qs("#sort").addEventListener("change", loadStore);
+qs("#listedOnly").addEventListener("change", loadStore);
+
 qs("#grid").addEventListener("click", (e)=>{
-  const btn = e.target.closest("button[data-open]");
-  if (!btn) return;
-  const sku = btn.getAttribute("data-open");
+  const openBtn = e.target.closest("[data-open-btn]");
+  const card = e.target.closest("[data-open]");
+  const sku = openBtn?.getAttribute("data-open-btn") || card?.getAttribute("data-open");
+  if (!sku) return;
   const it = pickItemBySku(sku);
   if (it) showItem(it);
 });
