--- a/logistics.html
+++ b/logistics.html
@@ -145,7 +145,7 @@
 
 <script>
 /* ===================== CONFIG ===================== */
-const API_URL = "PASTE_YOUR_WEB_APP_URL_HERE"; // <-- REQUIRED
+const API_URL = "https://script.google.com/macros/s/AKfycbw5s7R5FFQBNKqmQPwNl-jSa6g987HeyXS2eMDR1Y2H9pq5XUEn4QHnqGA5-B8cXAelEw/exec"; // <-- REQUIRED
 const API_KEY = ""; // optional
 
 const STAGE = "LOGISTICS";
