--- a/logistics.html
+++ b/logistics.html
@@ -600,7 +600,7 @@ document.addEventListener("keydown",(e)=>{
 
 /* ===================== Boot ===================== */
 async function boot(showToast=true){
-  if(!API_URL || API_URL==="PASTE_YOUR_WEB_APP_URL_HERE"){
+  if(!API_URL || API_URL==="https://script.google.com/macros/s/AKfycbw5s7R5FFQBNKqmQPwNl-jSa6g987HeyXS2eMDR1Y2H9pq5XUEn4QHnqGA5-B8cXAelEw/exec"){
     document.getElementById("list").innerHTML=`<div class="hint"><b>API_URL not set.</b><br>Paste your Apps Script Web App URL into logistics.html.</div>`;
     return;
   }
