--- a/processing.html
+++ b/processing.html
@@ -234,8 +234,8 @@
 
 <script>
 /* ===================== CONFIG ===================== */
-const API_URL = "https://script.google.com/macros/s/AKfycbw5s7R5FFQBNKqmQPwNl-jSa6g987HeyXS2eMDR1Y2H9pq5XUEn4QHnqGA5-B8cXAelEw/exec"; // <-- REQUIRED
-const API_KEY = "https://script.google.com/macros/s/AKfycbw5s7R5FFQBNKqmQPwNl-jSa6g987HeyXS2eMDR1Y2H9pq5XUEn4QHnqGA5-B8cXAelEw/exec"; // optional: match backend API_KEY if you set one
+const API_URL = "PASTE_YOUR_WEB_APP_URL_HERE"; // <-- REQUIRED
+const API_KEY = ""; // optional: match backend API_KEY if you set one
 
 const STAGE = "PROCESSING";
 const NEXT_STAGE = "STAGING";
